--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "homepage": "https://shahista786.github.io"
   },
   "scripts": {
+      "scripts": {
     "predeploy": "npm run build",
    "deploy": "gh-pages -d build",
+   "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
