--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-top-loading-bar": "^2.3.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "homepage": "https://shahista786.github.io"
   },
   "scripts": {
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
